fixed too many stats appearing on smaller screens

--- a/src/app/[steamid]/_components/WeaponsTable/WeaponsTable.module.css
+++ b/src/app/[steamid]/_components/WeaponsTable/WeaponsTable.module.css
@@ -7,23 +7,30 @@
     text-align: center;
 }
 
-@media (max-width: 680px) {
-    .table th:nth-child(3),
-    .table td:nth-child(3) {
-        display: none;
-    }
-}
-
-@media (max-width: 480px) {
+@media (max-width: 770px) {
     .table th:nth-child(4),
     .table td:nth-child(4) {
         display: none;
     }
 }
 
-@media (max-width: 420px) {
-    .table th:nth-child(5),
-    .table td:nth-child(5) {
+@media (max-width: 640px) {
+    .table th:nth-child(6),
+    .table td:nth-child(6) {
+        display: none;
+    }
+}
+
+@media (max-width: 560px) {
+    .table th:nth-child(3),
+    .table td:nth-child(3) {
+        display: none;
+    }
+}
+
+@media (max-width: 450px) {
+    .table th:nth-child(7),
+    .table td:nth-child(7) {
         display: none;
     }
 }
